--- a/002_texto_puro.html
+++ b/002_texto_puro.html
@@ -1,4 +1,4 @@
-<meta charset = "UFT-8">
+<meta charset = "UTF-8">
 
 A convenção que usaremos para criar nosso programa é adotar letras minúsculas e não usar acentos e, claro, usar a extensão .html.<br>
 
