retornos de funções e cálculo IMC

--- a/000-codigo_base.html
+++ b/000-codigo_base.html
@@ -2,4 +2,15 @@
 
 <script>
 
+	function Pular_Linha ()
+	{
+		document.write ( "<br><br>" );
+	}
+
+	function Exibir_Texto ( texto )
+	{
+		document.write ( text );
+		Pular_Linha ();
+	}
+
 </script>
