--- a/000-codigo_base.html
+++ b/000-codigo_base.html
@@ -9,8 +9,17 @@
 
 	function Exibir_Texto ( texto )
 	{
-		document.write ( text );
+		document.write ( texto );
 		Pular_Linha ();
 	}
+
+	function Exibir_Titulo ( texto )
+	{
+		document.write ( "<h1>" + texto + "</h1>" );
+	}
+	// ---------------------------------------------
+
+	Exibir_Titulo ( "" );
+
 
 </script>
