Estruturas de repetições

--- a/000-dados.html
+++ b/000-dados.html
@@ -31,4 +31,8 @@
 	parseInt(); // Converte String para Número
 	parseFloat(); // Converte String para Float
 
+	// NaN ( not a number )
+	if ( isNaN ( numero ))
+	{}
+
 </script>
