--- a/000-dados.html
+++ b/000-dados.html
@@ -1,5 +1,5 @@
 <br> Para criar quebras de linha.
-<h1> Para destacar o título principal da página
+<h1> Para destacar o título principal da página</h1>
 <meta charset = "UTF-8"> Conjunto de Caracteres, cadeias de caracteres ( acentos etc )
 <script></script> Inserir o código JavaScript dentro da tag  no HTML
 
@@ -14,7 +14,15 @@
 
 <p></p> Exibe um parágrafo
 
-<big></big> Altera a fonte do textop
+<big></big> Altera a fonte do texto
+
+<input/> Exibe um campo para inserir dados na página html
+
+
+<button>A Mensagem</button> Exibe um botão na página html
+
+
+
 
 <script>
 
@@ -34,5 +42,8 @@
 	// NaN ( not a number )
 	if ( isNaN ( numero ))
 	{}
+
+
+	document.querySelector() // Usamos o document.querySelector() para acessar o campo de texto no JavaScript e obter o seu valor com input.value.
 
 </script>
